--- a/views/centrodemensajes.ejs
+++ b/views/centrodemensajes.ejs
@@ -1,13 +1,13 @@
 <div class="container-fluid mt-3">
     <h2 style="color:blue;">Centro de mensajes</h2>
     <hr>
-
-    <div id="messages"></div>
-
-    <form class="form-inline" onsubmit="return addMessage(this)" autocomplete="off">
-        <input type="text" id="username" class="form-control my-2 mr-2" placeholder="Tu nombre">
-        <input type="text" id="texto" class="form-control my-2 mr-2" placeholder="Cuéntanos algo...">
+        
+    <form class="form-inline" id="addMessage" onsubmit="return addMessage(this)" autocomplete="off">
+        <input type="text" id="username" class="form-control my-2 mr-2" placeholder="Tu mail">
+            
+        <div id="messages"></div>
+            
+        <input type="text" id="message" class="form-control my-2 mr-2" placeholder="Tu mensaje">
         <input class="btn btn-primary my-2" type="submit" value="Enviar!">
     </form>
-    
 </div>
